# Makufff-File-NeXum

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  postman.json
backend/src/: main.rs
backend/src/controllers/: upload_controller.rs
backend/src/models/: mod.rs  upload_model.rs
backend/src/views/: mod.rs  upload_view.rs
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: file-uploader.tsx  navigation.tsx  upload-stats.tsx  uploaded-files.tsx
frontend/src/config/: env.ts
frontend/src/types/: api.ts
